votingapp/templates/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: votingapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: shristi19/votingapp-worker:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
